--- a/content/index.html
+++ b/content/index.html
@@ -1,11 +1,12 @@
 <html>
 	<head>
+        <script type="text/javascript" src="tests/data.js"></script>
+        <script type="text/javascript" src="scripts/helpers/valueTypeHelper.js"></script>
+        <script type="text/javascript" src="scripts/helpers/ASTHelper.js"></script>
 		<script type="text/javascript" src="scripts/helpers/FFHelper.js"></script>
 	</head>
 	
 	<body>
 		<h2>Testing Clone Detector</h2>
-		<div>Test data:</div>
-		<p>Ides!</p>
 	</body>
 </html>
