A basis for generating characteristic vectors

--- a/content/index.html
+++ b/content/index.html
@@ -3,7 +3,11 @@
         <script type="text/javascript" src="tests/data.js"></script>
         <script type="text/javascript" src="scripts/helpers/valueTypeHelper.js"></script>
         <script type="text/javascript" src="scripts/helpers/ASTHelper.js"></script>
-		<script type="text/javascript" src="scripts/helpers/FFHelper.js"></script>
+        <script type="text/javascript" src="scripts/helpers/FFHelper.js"></script>
+        <script type="text/javascript" src="scripts/helpers/VectorGenerator.js"></script>
+        <script type="text/javascript">
+            VectorGenerator.generate(testData[0]);
+        </script>
 	</head>
 	
 	<body>
