VectorGenerator moved, jQuery function tested (OK), setParentChildRelationship function added, VectorDistanceCalculator added (return value is correct now), flatten function added

--- a/content/index.html
+++ b/content/index.html
@@ -12,6 +12,10 @@
         	VectorGenerator.generate(testData[41]);
         	VectorGenerator.generate(testData[40]);
             VectorDistanceCalculator.calculateHammingDistance();
+            VectorDistanceCalculator.calculateEucledianDistance();
+            
+            //jquery
+            VectorGenerator.generate(testData[46]);
             
         </script>
 	</head>
