--- a/content/index.html
+++ b/content/index.html
@@ -7,6 +7,7 @@
         <script type="text/javascript" src="scripts/characteristicVectors/VectorGenerator.js"></script>
         <script type="text/javascript" src="scripts/characteristicVectors/VectorDistanceCalculator.js"></script>
         <script type="text/javascript" src="scripts/mergeableNodesDetector/MergeableNodeDetector.js"></script>
+        <script type="text/javascript" src="scripts/helpers/MathHelper.js"></script>
         <script type="text/javascript">
         	
         
