Changed the way the algorithm works

--- a/content/debug/index.html
+++ b/content/debug/index.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="../scripts/helpers/valueTypeHelper.js"></script>
     <script type="text/javascript" src="../scripts/helpers/ASTHelper.js"></script>
     <script type="text/javascript" src="../scripts/helpers/FFHelper.js"></script>
+    <script type="text/javascript" src="../scripts/characteristicVectors/CharacteristicVector.js"></script>
     <script type="text/javascript" src="../scripts/characteristicVectors/VectorGenerator.js"></script>
     <script type="text/javascript" src="../scripts/characteristicVectors/VectorDistanceCalculator.js"></script>
     <script type="text/javascript" src="../scripts/mergeableNodesDetector/MergeableNodeDetector.js"></script>
@@ -52,7 +53,7 @@
                     CombinationsVectorCalculator.generateCombinationsVector(testData)//vektor kombinacije
                 ),
                 2,
-                0.6
+                0.95
             );
 
             var testContainer = document.createElement("div"); //trpa u objekt testContainer novi div
